# DiskArbitrator

./: .gitignore  CMakeLists.txt  README.md
proto/: CMakeLists.txt  diskarbitrator.proto
src/diskarbitratorctl/: arbitrate.cpp  attach.cpp  client.hpp  commands.hpp  common.cpp  common.hpp  eject.cpp  info.cpp  list.cpp  main.cpp  mount.cpp  socket.cpp  socket.hpp  umount.cpp
src/diskarbitratord/: cftypes.cpp  cftypes.hpp  diskarbitration.cpp  diskarbitration.hpp  hdiutil.cpp  hdiutil.hpp  main.cpp  plist.cpp  plist.hpp  scope_guard.hpp  server.cpp  server.hpp
